--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -5,9 +5,9 @@
         android:icon="@drawable/ic_home"
         android:title="@string/nav_item_title_home" />
     <item
-        android:id="@+id/detailsFragment"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search"
-        android:title="Search" />
+        android:title="@string/nav_item_title_search" />
     <item
         android:id="@+id/watchlistFragment"
         android:icon="@drawable/ic_bookmark"
