--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -6,63 +6,27 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/detailsFragment"
-        android:name="com.example.moviestorenew.details.ui.DetailsFragment"
-        android:label="DetailsFragment"
-        tools:layout="@layout/details_fragment" >
-        <action
-            android:id="@+id/action_detailsFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_detailsFragment_to_watchlistFragment"
-            app:destination="@id/watchlistFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.moviestorenew.home.ui.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/home_fragment" >
-        <action
-            android:id="@+id/action_homeFragment_to_detailsFragment"
-            app:destination="@id/detailsFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_watchlistFragment"
-            app:destination="@id/watchlistFragment" />
-    </fragment>
+        tools:layout="@layout/home_fragment" />
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.moviestorenew.auth.login.ui.LoginFragment"
         android:label="LoginFragment"
-        tools:layout="@layout/login_fragment" >
-        <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
-    </fragment>
+        tools:layout="@layout/login_fragment" />
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.moviestorenew.auth.register.ui.RegisterFragment"
         android:label="RegisterFragment"
-        tools:layout="@layout/register_fragment" >
-        <action
-            android:id="@+id/action_registerFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+        tools:layout="@layout/register_fragment" />
     <fragment
         android:id="@+id/watchlistFragment"
         android:name="com.example.moviestorenew.watchlist.ui.WatchlistFragment"
         android:label="WatchlistFragment"
-        tools:layout="@layout/watchlist_fragment" >
-        <action
-            android:id="@+id/action_watchlistFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_watchlistFragment_to_detailsFragment"
-            app:destination="@id/detailsFragment" />
-    </fragment>
+        tools:layout="@layout/watchlist_fragment" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.moviestorenew.search.ui.SearchFragment"
+        android:label="SearchFragment" />
 </navigation>
