--- a/app/src/main/res/layout/movie_search_card.xml
+++ b/app/src/main/res/layout/movie_search_card.xml
@@ -28,7 +28,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +37,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:layout_gravity="top"
             android:id="@+id/movie_title_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,6 +47,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:layout_gravity="bottom"
             android:id="@+id/movie_genre_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,6 +58,7 @@
             app:drawableStartCompat="@drawable/ic_ticket" />
 
         <TextView
+            android:layout_gravity="bottom"
             android:id="@+id/movie_year_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,15 +68,15 @@
             android:textSize="12sp"
             app:drawableStartCompat="@drawable/ic_calendar" />
 
-        <TextView
-            android:id="@+id/movie_duration_textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:gravity="center_vertical"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:drawableStartCompat="@drawable/ic_clock" />
+<!--        <TextView-->
+<!--            android:id="@+id/movie_duration_textView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:drawablePadding="6dp"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="12sp"-->
+<!--            app:drawableStartCompat="@drawable/ic_clock" />-->
 
     </LinearLayout>
 
