--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -20,7 +20,7 @@
             android:id="@+id/roundedImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black"
+            android:background="@color/blue_grey_dark"
             android:scaleType="fitXY" />
 
     </androidx.cardview.widget.CardView>
